# AnotherSimpleCalculator

./: CMakeLists.txt  README.md
include/: MainWindow.hpp  MathOperationsRecordsWidget.hpp
include/models/: DatabaseModel.hpp
src/: MainWindow.cpp  MathOperationsRecordsWidget.cpp  main.cpp
src/frontend/: MainWindow.ui  MathOperationsRecordsWidget.ui
src/models/: DatabaseModel.cpp
